--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       sizes="180x180"
       href="favicon/apple-touch-icon.png"
     />
-    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <meta name="apple-mobile-web-app-title" content="abracadabra.money" />
     <link rel="manifest" href="favicon/site.webmanifest" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
